--- a/index.mdx
+++ b/index.mdx
@@ -9,7 +9,7 @@ description: "Pivot API documentation"
 Pivot core content
 
 <Columns cols={2}>
-  <Card title="Integration" icon="pen-to-square" href="/integrations">
+  <Card title="Integration" icon="pen-to-square" href="/users/integrations/index">
     All our integrations
   </Card>
 </Columns>
@@ -18,6 +18,6 @@ Pivot core content
 
 Get your documentation site up and running in minutes.
 
-<Card title="Write doc" icon="rocket" href="/quickstart" horizontal>
+<Card title="Write doc" icon="rocket" href="/_sample/ai-tools/cursor" horizontal>
   Follow our three step quickstart guide.
 </Card>
