--- a/users/integrations/ADP.mdx
+++ b/users/integrations/ADP.mdx
@@ -21,7 +21,7 @@ ADP integration allows you to seamlessly connect your Pivot account with ADP's p
   <Step title="Link Your Account">
     Click the "Link" button on the ADP integration card. You'll be redirected to the ADP Marketplace to complete the subscription process.
     <Accordion title="Don't forget to write the companyId during the link process on ADP">
-        <img src="logo/logo_pivot.png"/>
+        <img src="/_assets/logo/logo_pivot.png"/>
     </Accordion>
   </Step>
   <Step title="Automatic Setup">
