skytab openapi doc

--- a/users/integrations/index.mdx
+++ b/users/integrations/index.mdx
@@ -12,10 +12,18 @@ description: "Payroll, Reservation, POS"
   <Card title="Nethris" icon="pen-to-square" href="/users/integrations/nethris">
     Payroll
   </Card>
-  <Card title="EmployeurD" icon="pen-to-square" href="/users/integrations/employeurd">
+  <Card
+    title="EmployeurD"
+    icon="pen-to-square"
+    href="/users/integrations/employeurd"
+  >
     Payroll
   </Card>
-  <Card title="Powerpay" icon="pen-to-square" href="/users/integrations/powerpay">
+  <Card
+    title="Powerpay"
+    icon="pen-to-square"
+    href="/users/integrations/powerpay"
+  >
     Payroll
   </Card>
 </Columns>
@@ -26,10 +34,18 @@ description: "Payroll, Reservation, POS"
   <Card title="Libro" icon="pen-to-square" href="/users/integrations/libro">
     Reservation
   </Card>
-  <Card title="EmployeurD" icon="pen-to-square" href="/users/integrations/employeurd">
+  <Card
+    title="EmployeurD"
+    icon="pen-to-square"
+    href="/users/integrations/employeurd"
+  >
     Payroll
   </Card>
-  <Card title="Powerpay" icon="pen-to-square" href="/users/integrations/powerpay">
+  <Card
+    title="Powerpay"
+    icon="pen-to-square"
+    href="/users/integrations/powerpay"
+  >
     Payroll
   </Card>
 </Columns>
@@ -40,10 +56,17 @@ description: "Payroll, Reservation, POS"
   <Card title="Veloce" icon="pen-to-square" href="/users/integrations/veloce">
     POS
   </Card>
+  <Card title="Skytab" icon="pen-to-square" href="/users/integrations/Skytab">
+    POS
+  </Card>
   <Card title="MaitreD" icon="pen-to-square" href="/users/integrations/maitred">
     POS
   </Card>
-  <Card title="Lightspeed" icon="pen-to-square" href="/users/integrations/lightspeed">
+  <Card
+    title="Lightspeed"
+    icon="pen-to-square"
+    href="/users/integrations/lightspeed"
+  >
     POS
   </Card>
   <Card title="Cluster" icon="pen-to-square" href="/users/integrations/cluster">
