feat(maitreD): Add integration explanation

--- a/users/integrations/Skytab.mdx
+++ b/users/integrations/Skytab.mdx
@@ -19,24 +19,34 @@ The integration can only be initiated from the Skytab Marketplace:
 
 <Steps>
   <Step title="Log into Skytab">
-    The customer needs to access their Skytab account and navigate to the Shift4 Marketplace.
+    The customer needs to access their Skytab account and navigate to the Shift4
+    Marketplace.
   </Step>
   <Step title="Find Pivot">
-    In the marketplace, search for "Pivot" or browse the available integrations to find the Pivot app.
+    In the marketplace, search for "Pivot" or browse the available integrations
+    to find the Pivot app.
   </Step>
   <Step title="Click Install">
-    Click the "Install" button on the Pivot integration. This will redirect them to Pivot automatically.
-    <Warning>The customer has 15 minutes to complete the setup once they click Install.</Warning>
+    Click the "Install" button on the Pivot integration. This will redirect them
+    to Pivot automatically.
+    <Warning>
+      The customer has 15 minutes to complete the setup once they click Install.
+    </Warning>
   </Step>
   <Step title="Enter Company ID">
-    When redirected to Pivot, they'll be prompted to enter their Pivot Company ID. This connects their Skytab location to the correct Pivot account.
+    When redirected to Pivot, they'll be prompted to enter their Pivot Company
+    ID. This connects their Skytab location to the correct Pivot account.
   </Step>
   <Step title="Confirmation">
-    Once completed, they'll see a success message. The integration is now active and will begin syncing data automatically.
+    Once completed, they'll see a success message. The integration is now active
+    and will begin syncing data automatically.
   </Step>
 </Steps>
 
-<Tip>If the customer doesn't know their Company ID, they can find it in Pivot under Account Settings → Company Info.</Tip>
+<Tip>
+  If the customer doesn't know their Company ID, they can find it in Pivot under
+  Account Settings → Company Info.
+</Tip>
 
 ## Managing Employees
 
@@ -52,17 +62,22 @@ Once the integration is set up, customers can link their Pivot employees to thei
     Look for the "Skytab ID" field in the employee information section.
   </Step>
   <Step title="Search for Employee">
-    Click on the field and type at least 3 letters of the employee's name as it appears in Skytab.
+    Click on the field and type at least 3 letters of the employee's name as it
+    appears in Skytab.
   </Step>
   <Step title="Select from Results">
-    A dropdown will appear with matching employees from Skytab. Select the correct employee.
+    A dropdown will appear with matching employees from Skytab. Select the
+    correct employee.
   </Step>
   <Step title="Save">
     The Skytab ID will be saved automatically, linking the two profiles.
   </Step>
 </Steps>
 
-<Info>The search looks for matches in both first and last names. If an employee isn't found, verify their name is entered correctly in Skytab.</Info>
+<Info>
+  The search looks for matches in both first and last names. If an employee
+  isn't found, verify their name is entered correctly in Skytab.
+</Info>
 
 ## Sales Data
 
@@ -81,7 +96,10 @@ Customers can view their Skytab sales data in Pivot through:
 1. **Dashboard**: Real-time sales appear on the main dashboard
 2. **Labor Cost Analysis**: Sales vs. labor cost comparisons in the Payroll section
 
-<Note>Sales data typically appears within an hour of transactions being completed in Skytab.</Note>
+<Note>
+  Sales data typically appears within an hour of transactions being completed in
+  Skytab.
+</Note>
 
 ## Disconnecting the Integration
 
@@ -100,7 +118,8 @@ Customers can remove the integration directly from Pivot:
     Click the "Disconnect" button on the Skytab card.
   </Step>
   <Step title="Confirm">
-    Confirm the disconnection when prompted. This removes the integration from both Pivot and Skytab.
+    Confirm the disconnection when prompted. This removes the integration from
+    both Pivot and Skytab.
   </Step>
 </Steps>
 
@@ -119,17 +138,22 @@ Customers can also remove the integration from Skytab:
     Locate Pivot in the list of installed applications.
   </Step>
   <Step title="Uninstall">
-    Click "Uninstall" or "Remove". Pivot will be notified automatically and the integration will be disconnected.
+    Click "Uninstall" or "Remove". Pivot will be notified automatically and the
+    integration will be disconnected.
   </Step>
 </Steps>
 
-<Warning>Disconnecting the integration will stop all data synchronization. Historical data already in Pivot will remain, but no new data will be imported.</Warning>
+<Warning>
+  Disconnecting the integration will stop all data synchronization. Historical
+  data already in Pivot will remain, but no new data will be imported.
+</Warning>
 
 ## Troubleshooting Common Issues
 
 ### "Link Token Expired" Error
 
 If a customer sees this error during setup:
+
 - They need to return to the Skytab Marketplace
 - Click "Install" again to generate a new link
 - Complete the setup within 15 minutes
@@ -137,6 +161,7 @@ If a customer sees this error during setup:
 ### Employees Not Appearing in Search
 
 If employees aren't found when searching:
+
 - Verify employees exist in the Skytab POS system
 - Check that names are spelled correctly
 - Ensure the integration shows as "Connected" in settings
@@ -145,6 +170,7 @@ If employees aren't found when searching:
 ### Sales Data Not Updating
 
 If sales aren't appearing in Pivot:
+
 - Confirm transactions exist in Skytab for that time period
 - Check the integration status in Account Settings
 - Verify the company timezone is set correctly in both systems
@@ -153,6 +179,7 @@ If sales aren't appearing in Pivot:
 ### Integration Shows as Disconnected
 
 If the integration appears disconnected:
+
 - Check if it was removed from the Skytab Marketplace
 - Verify the Skytab account is still active
 - Re-install from the Skytab Marketplace if needed
@@ -161,16 +188,20 @@ If the integration appears disconnected:
 
 <AccordionGroup>
   <Accordion title="Can I connect multiple Skytab locations?">
-    Each Pivot company can connect to one Skytab location. For multiple locations, you'll need separate Pivot companies for each.
+    Each Pivot company can connect to one Skytab location. For multiple
+    locations, you'll need separate Pivot companies for each.
   </Accordion>
   <Accordion title="How far back can I import sales data?">
-    Pivot can import up to one year of historical sales data from Skytab. This happens automatically during the initial setup.
+    Pivot can import up to one year of historical sales data from Skytab. This
+    happens automatically during the initial setup.
   </Accordion>
   <Accordion title="Do I need to map all employees?">
     It's recommended to map all active employees for accurate reporting.
   </Accordion>
   <Accordion title="What happens to my data if I disconnect?">
-    All historical data remains in Pivot. Only new data synchronization stops. You can reconnect anytime to resume syncing (this will re-trigger the get last year sales function).
+    All historical data remains in Pivot. Only new data synchronization stops.
+    You can reconnect anytime to resume syncing (this will re-trigger the get
+    last year sales function).
   </Accordion>
 </AccordionGroup>
 
@@ -179,9 +210,12 @@ If the integration appears disconnected:
 If customers need additional assistance:
 
 - **For Skytab issues**: Contact Shift4 support directly
-    - Marketplace: marketplace-partnerships@shift4.com
-    - Integration contact: Corey Grzybowski cgrzybowski@shift4.com
+  - Marketplace: marketplace-partnerships@shift4.com
+  - Integration contact: Corey Grzybowski cgrzybowski@shift4.com
 - **For Pivot issues**: Contact the dev team
 - **For integration setup**: Follow this guide or contact Pivot support
 - Api Documentation: https://conecto-api.shift4payments.com/docs/marketplace/locations.html
-<Note>Remember that the integration must be initiated from the Skytab Marketplace - it cannot be started from within Pivot.</Note>
+  <Note>
+    Remember that the integration must be initiated from the Skytab Marketplace
+    - it cannot be started from within Pivot.
+  </Note>
