--- a/users/integrations/index.mdx
+++ b/users/integrations/index.mdx
@@ -19,4 +19,7 @@ description: "Payroll, Reservation, POS"
   <Card title="MaitreD" icon="pen-to-square" href="/users/integrations/MaitreD">
     POS
   </Card>
+    <Card title="Square" icon="pen-to-square" href="/users/integrations/Square">
+    POS
+  </Card>
 </Columns>
