Documentation edits made through Mintlify web editor

--- a/deployment/backend.mdx
+++ b/deployment/backend.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Backend process checklist"
+title: "Backend"
 description: "A pragmatic, environment-aware checklist to build, test, secure, and deploy backend functions."
 ---
 
