--- a/deployment/frontend.mdx
+++ b/deployment/frontend.mdx
@@ -1,5 +1,5 @@
 ---
-title: Frontend deployment checklist
+title: "Frontend"
 description: A comprehensive guide for building, testing, and deploying the Pivot frontend across environments.
 ---
 
