--- a/deployment/frontend.mdx
+++ b/deployment/frontend.mdx
@@ -9,7 +9,7 @@ Use it top-to-bottom when preparing changes for development/staging/production.
 
 ## Quick checklist
 
-- [ ] Environment variables set correctly (.env.{development,staging,production})
+- [ ] Environment variables set correctly (.env.\{development,staging,production})
 - [ ] Dependencies installed and up-to-date
 - [ ] TypeScript type-checks pass
 - [ ] ESLint passes (no unused vars/imports)
