--- a/users/integrations/index.mdx
+++ b/users/integrations/index.mdx
@@ -4,22 +4,26 @@ description: "Payroll, Reservation, POS"
 ---
 
 ## Payroll
+
 <Columns cols={2}>
   <Card title="ADP" icon="pen-to-square" href="/users/integrations/ADP">
     Payroll
   </Card>
 </Columns>
 
-
 ## POS
+
 <Columns cols={2}>
+  <Card title="Cluster" icon="pen-to-square" href="/users/integrations/Cluster">
+    POS
+  </Card>
   <Card title="Skytab" icon="pen-to-square" href="/users/integrations/Skytab">
     POS
   </Card>
   <Card title="MaitreD" icon="pen-to-square" href="/users/integrations/MaitreD">
     POS
   </Card>
-    <Card title="Square" icon="pen-to-square" href="/users/integrations/Square">
+  <Card title="Square" icon="pen-to-square" href="/users/integrations/Square">
     POS
   </Card>
 </Columns>
